# getsnmp

./: CHANGES  Makefile.in  VERSION  conf_test  config.h.in  configure.in  expand.c  expand.h  getsnmp.c  getsnmp.c.orig  getsnmp.h  install.sh.in  loadconfig.c  loadconfig.h  loadfile.c  loadfile.h  log.c  server.c  tool_code.sh
doc/: getsnmp.8
etc/: getsnmp.conf.in
exp/: Makefile  ping  ping.c  ping.h
