#
# Popyright (c) 2005-2010 Thierry FOURNIER
# $Id: configure.ac 96 2006-05-09 20:32:19Z thierry $
#

AC_INIT(getsnmp, 0.9)
AC_PREREQ(2.59)

# default install path
AC_PREFIX_DEFAULT(/opt/getsnmp)

export CPPFLAGS="-I/usr/local/include -I/usr/include -I/usr/pkg/include"
export CFLAGS="-I/usr/local/include -I/usr/include -I/usr/pkg/include"
export LDFLAGS="-L/usr/local/lib -L/lib -L/usr/lib -L/usr/pkg/lib"

# Checks for programs.
echo
echo "======================================================="
echo " = Check for programs"
echo "======================================================="
AC_PROG_CC

# Checks for header files.
echo
echo "======================================================="
echo " = Check for header files"
echo "======================================================="
AC_C_CONST
AC_TYPE_UID_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_HEADER_STDC
AC_CHECK_HEADERS(errno.h, , echo "didn't find errno.h"; exit 1)
AC_CHECK_HEADERS(fcntl.h, , echo "didn't find fcntl.h"; exit 1)
AC_CHECK_HEADERS(grp.h, , echo "didn't find grp.h"; exit 1)
AC_CHECK_HEADERS(net-snmp/net-snmp-config.h, , echo "didn't find net-snmp/net-snmp-config.h"; exit 1)
AC_CHECK_HEADERS(pwd.h, , echo "didn't find pwd.h"; exit 1)
AC_CHECK_HEADERS(signal.h, , echo "didn't find signal.h"; exit 1)
AC_CHECK_HEADERS(stdarg.h, , echo "didn't find stdarg.h"; exit 1)
AC_CHECK_HEADERS(stdio.h, , echo "didn't find stdio.h"; exit 1)
AC_CHECK_HEADERS(stdlib.h, , echo "didn't find stdlib.h"; exit 1)
AC_CHECK_HEADERS(string.h, , echo "didn't find string.h"; exit 1)
AC_CHECK_HEADERS(sys/stat.h, , echo "didn't find sys/stat.h"; exit 1)
AC_CHECK_HEADERS(sys/time.h, , echo "didn't find sys/time.h"; exit 1)
AC_CHECK_HEADERS(sys/types.h, , echo "didn't find sys/types.h"; exit 1)
AC_CHECK_HEADERS(time.h, , echo "didn't find time.h"; exit 1)
AC_CHECK_HEADERS(unistd.h, , echo "didn't find unistd.h"; exit 1)

# Checks for libraries.
echo
echo "======================================================="
echo " = Check for libraries"
echo "======================================================="
AC_CHECK_LIB([crypto], [HMAC], , echo "didn't find lib crypto"; exit 1)
AC_CHECK_LIB([netsnmp], [init_snmp], , echo "didn't find lib snmp"; exit 1)

# Checks for library functions.
echo
echo "======================================================="
echo " = Check for library functions"
echo "======================================================="
AC_FUNC_FORK
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STAT
AC_CHECK_FUNCS([bzero])
AC_CHECK_FUNCS([endgrent])
AC_CHECK_FUNCS([endpwent])
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([select])
AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([strerror])

##############################################################
# compilation options
##############################################################

# Enable syslog system
AC_ARG_WITH(syslog, [  --with-syslog           Turn on Syslog support (default=yes)], [ with_syslog=$withval ], [ with_syslog=yes ])
if test "x$with_syslog" != "xno"; then
	echo
	echo "======================================================="
	echo " = Check syslog avalaibility"
	echo "======================================================="
	AC_CHECK_HEADERS(syslog.h, forcesyslogno=0, forcesyslogno=1)
	AC_DEFINE(USE_SYSLOG, 1, [Whether we have SYSLOG])
fi

# Enable rrd system
AC_ARG_WITH(rrd,    [  --with-rrd              Turn on RRD support (default=yes)], [ with_rrd=$withval ], [ with_rrd=yes ])
if test "x$with_rrd" != "xno"; then
	echo
	echo "======================================================="
	echo " = Check rrd avalaibility"
	echo "======================================================="
	no_rrd=0
	AC_CHECK_HEADERS(rrd.h, , echo "didn't find rrd.h"; no_rrd=1)
	AC_CHECK_LIB([rrd], [rrd_update], , echo "didn't find lib rrd"; no_rrd=1)
	if test $no_rrd -eq 1; then
		echo "-----------------------------------"
		echo "/!\  WARNING: compile without RRD"
		echo "-----------------------------------"
	else
		AC_DEFINE(USE_RRD, 1, [Whether we have RRD])
	fi
fi

# Generate files
echo
echo "======================================================="
echo " = Generate files"
echo "======================================================="
AC_CONFIG_FILES(Makefile)
AC_CONFIG_HEADER(config.h)
AC_CONFIG_FILES(install.sh)

AC_OUTPUT
